<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/noteView"
        layout="@layout/view_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardViewEdit"
        style="?attr/cardStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:visibility="gone"
        card_view:cardCornerRadius="6dp"
        card_view:cardElevation="4dp">

        <LinearLayout
            android:id="@+id/linearLayoutEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayoutEditTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:autoLink="all"
                    android:background="@android:color/transparent"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/hint_add"
                    android:inputType="textCapWords"
                    android:maxLength="50"
                    android:singleLine="true"
                    android:textStyle="italic"
                    tools:ignore="UnusedAttribute" />

                <ImageButton
                    android:id="@+id/imageButtonVoice"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/desc_voice"
                    android:src="@drawable/ic_hardware_keyboard_voice" />
            </LinearLayout>

            <ScrollView
                android:id="@+id/scrollViewEditContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/linearLayoutEditContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/editTextContent"
                        style="@style/textAppearanceMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:autoLink="all"
                        android:hint="@string/hint_content"
                        android:inputType="textCapSentences|textMultiLine" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/buttonCancel"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_cancel" />

                        <Button
                            android:id="@+id/buttonSave"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_edit" />
                    </LinearLayout>

                </LinearLayout>
            </ScrollView>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>